--- a/hello_app/templates/home.html
+++ b/hello_app/templates/home.html
@@ -3,5 +3,5 @@
 Home
 {% endblock %}
 {% block content %}
-<p>Home page for the Flask tutorial.</p>
+<p>Home page for the Flask tutorial (UPd TEST1).</p>
 {% endblock %}
