--- a/hello_app/templates/home.html
+++ b/hello_app/templates/home.html
@@ -3,5 +3,6 @@
 Home
 {% endblock %}
 {% block content %}
-<p>Home page for the Flask tutorial (13:47).</p>
+<p>Home page for the Flask tutorial.</p>
+<p>n={{n}}</p>
 {% endblock %}
