--- a/hello_app/templates/home.html
+++ b/hello_app/templates/home.html
@@ -4,5 +4,5 @@ Home
 {% endblock %}
 {% block content %}
 <p>Home page for the Flask tutorial.</p>
-<p>n={{n}}</p>
+<p>Taille BDD : {{n}}</p>
 {% endblock %}
